--- a/index.html
+++ b/index.html
@@ -1,41 +1,189 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Goon Squad</title>
   <style>
-    :root{--black:#000000;--orange:#FF6A00}
-    html,body{height:100%;margin:0;background:var(--black);color:var(--orange);font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial}
-    .container{min-height:100%;display:flex;flex-direction:column;align-items:center;justify-content:center;padding:2rem;text-align:center}
-    h1{font-size:4rem;margin:0 0 0.5rem;color:var(--orange);letter-spacing:0.06em}
-    h2{margin:0 0 1.5rem;color:var(--orange);opacity:0.95}
-    p{max-width:55ch;font-size:1.125rem;line-height:1.5;margin:0 0 1.25rem;color:var(--orange)}
-    .members{display:flex;gap:1.25rem;margin-top:1rem}
-    .member{border:2px solid var(--orange);padding:0.75rem 1rem;border-radius:0.6rem}
-    .footer{position:fixed;left:0;right:0;bottom:0;padding:0.5rem 1rem;text-align:center;font-size:0.875rem;color:var(--orange);opacity:0.9}
-    a{color:var(--orange);text-decoration:underline}
-    @media (max-width:600px){h1{font-size:2.4rem}}
+    :root{
+      --black: #000000;
+      --orange: #FF6A00;
+    }
+
+    /* Basic reset */
+    *{box-sizing:border-box}
+    html,body{height:100%;margin:0;background:var(--black);color:var(--orange);font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial}
+    a{color:var(--orange);text-decoration:none}
+
+    /* Animated background (only black & orange) */
+    .bg {
+      position:fixed;inset:0;z-index:0;overflow:hidden;background:var(--black);
+    }
+    .bg .band{
+      position:absolute;left:-40%;top:-20%;width:180%;height:140%;
+      background:linear-gradient(120deg, rgba(255,106,0,0.06) 0%, rgba(255,106,0,0.02) 20%, transparent 45%);
+      transform:rotate(-12deg);
+      animation: drift 18s linear infinite;
+      mix-blend-mode:screen;
+      filter:blur(30px);
+    }
+    .bg .grid{
+      position:absolute;inset:-10%;background:
+        repeating-linear-gradient(135deg, rgba(255,106,0,0.02) 0 6px, transparent 6px 12px);
+      opacity:0.85;
+      animation: slide 22s linear infinite;
+      mix-blend-mode:screen;
+      pointer-events:none;
+    }
+    @keyframes drift{from{transform:translateX(-10%) rotate(-12deg)}to{transform:translateX(10%) rotate(-12deg)}}
+    @keyframes slide{from{transform:translateY(-8%)}to{transform:translateY(8%)}}
+
+    /* Layout */
+    .wrap{min-height:100%;display:flex;align-items:center;justify-content:center;padding:48px;z-index:1;position:relative}
+    .card{
+      width:100%;max-width:980px;border-radius:14px;padding:28px;background:linear-gradient(180deg, rgba(255,106,0,0.02), rgba(255,106,0,0.01));
+      border:1px solid rgba(255,106,0,0.12);box-shadow:0 20px 60px rgba(255,106,0,0.03);
+      backdrop-filter:blur(2px);
+      overflow:hidden;
+    }
+
+    header{display:flex;flex-direction:column;align-items:center;gap:6px;text-align:center}
+    .logo{font-weight:900;font-size:3.2rem;letter-spacing:0.08em;color:var(--orange);text-transform:uppercase;display:inline-block;position:relative}
+    .logo .glow{position:absolute;left:50%;transform:translateX(-50%);bottom:-12px;width:80px;height:6px;border-radius:4px;background:linear-gradient(90deg,var(--orange),rgba(255,106,0,0.8));filter:blur(1px);opacity:0.95}
+    .subtitle{color:var(--orange);opacity:0.95;font-weight:600}
+
+    main{display:flex;gap:28px;align-items:flex-start;justify-content:space-between;margin-top:18px;flex-wrap:wrap}
+    .intro{flex:1;min-width:260px}
+    .intro p{margin:0;color:var(--orange);line-height:1.65;font-size:1.05rem}
+
+    /* Stats chips */
+    .chips{display:flex;gap:8px;margin-top:14px;flex-wrap:wrap}
+    .chip{padding:8px 12px;border-radius:999px;border:1px solid rgba(255,106,0,0.12);font-size:0.88rem;background:linear-gradient(180deg, rgba(255,106,0,0.01), transparent)}
+
+    /* Members column */
+    .members{flex:0 0 320px;display:flex;flex-direction:column;gap:10px;min-width:220px}
+    .member{
+      display:flex;align-items:center;gap:12px;padding:12px;border-radius:12px;border:1px solid rgba(255,106,0,0.10);
+      transition:transform .22s cubic-bezier(.2,.9,.3,1),box-shadow .22s,background .22s;cursor:default;background:linear-gradient(180deg, rgba(255,106,0,0.01), rgba(255,106,0,0.005));
+    }
+    .member:hover{transform:translateY(-8px);box-shadow:0 18px 40px rgba(255,106,0,0.06)}
+    .avatar{
+      width:56px;height:56px;border-radius:12px;display:grid;place-items:center;font-weight:800;
+      background:linear-gradient(135deg,var(--orange),rgba(255,106,0,0.95));color:var(--black);box-shadow:0 8px 24px rgba(255,106,0,0.10);
+      transform:translateY(0);transition:transform .3s;
+    }
+    .member:hover .avatar{transform:translateY(-4px) rotate(-2deg)}
+    .name{font-weight:800;color:var(--orange);letter-spacing:0.02em}
+    .role{font-size:0.88rem;color:var(--orange);opacity:0.85}
+
+    /* Entrance animations */
+    .card, .member, .chip{opacity:0;transform:translateY(8px)}
+    .card.loaded, .card.loaded .member, .card.loaded .chip{opacity:1;transform:none}
+    .card.loaded .member{transition-delay:.12s}
+    .card.loaded .chip{transition-delay:.08s}
+
+    /* Footer inside card */
+    .card-footer{margin-top:18px;text-align:center;color:var(--orange);opacity:0.95}
+
+    /* Fixed site footer */
+    .site-footer{
+      position:fixed;left:0;right:0;bottom:0;padding:10px 14px;text-align:center;font-size:0.95rem;color:var(--orange);
+      z-index:2;background:linear-gradient(180deg, rgba(0,0,0,0.0), rgba(0,0,0,0.45));
+      backdrop-filter:blur(4px);
+      border-top:1px solid rgba(255,106,0,0.06);
+    }
+
+    /* Responsive */
+    @media (max-width:860px){
+      .members{flex-direction:row;flex-wrap:wrap;gap:10px;flex:1}
+      .member{flex:1;min-width:120px}
+    }
+    @media (max-width:520px){
+      .logo{font-size:1.9rem}
+      .card{padding:18px}
+      .avatar{width:48px;height:48px}
+    }
+
+    /* Small decorative pulse for emphasis */
+    .pulse{position:relative}
+    .pulse::after{
+      content:"";position:absolute;inset:0;border-radius:inherit;background:radial-gradient(circle, rgba(255,106,0,0.06) 0%, transparent 40%);opacity:0.9;animation:pulse 3.5s ease-in-out infinite;
+      pointer-events:none;
+    }
+    @keyframes pulse{0%{transform:scale(.98)}50%{transform:scale(1.02)}100%{transform:scale(.98)}}
   </style>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>Goon Squad</h1>
-      <h2>Official website</h2>
-    </header>
-
-    <main>
-      <p>Welcome to the official Goon Squad website. The Goon Squad is the most powerful gooners in the world. Anyone who wants to 1v1 in a swordfight—we will win. We are really powerful and can land 100 hits in 1 minute, easy.</p>
-
-      <div class="members" aria-label="Members">
-        <div class="member">Ozzy</div>
-        <div class="member">Ryan</div>
-        <div class="member">Zane</div>
-      </div>
-    </main>
-
-    <div class="footer">All content black & orange — this page uses only black and orange.</div>
+  <div class="bg" aria-hidden="true">
+    <div class="band"></div>
+    <div class="grid"></div>
   </div>
+
+  <div class="wrap">
+    <section class="card" id="mainCard" role="main" aria-labelledby="siteTitle">
+      <header>
+        <div class="logo" id="siteTitle">Goon Squad
+          <div class="glow" aria-hidden="true"></div>
+        </div>
+        <div class="subtitle">Official website</div>
+      </header>
+
+      <main>
+        <div class="intro">
+          <p>Welcome to the official Goon Squad website. The Goon Squad is the most powerful gooners in the world. Anyone who wants to 1v1 in a swordfight — we will win. We are really powerful and can land 100 hits in 1 minute, easy.</p>
+
+          <div class="chips" aria-hidden="true">
+            <div class="chip">1v1: Ready</div>
+            <div class="chip">Swordfighters</div>
+            <div class="chip">Elite</div>
+          </div>
+        </div>
+
+        <aside class="members" aria-label="Members">
+          <div class="member pulse">
+            <div class="avatar">OZ</div>
+            <div>
+              <div class="name">Ozzy</div>
+              <div class="role">Leader</div>
+            </div>
+          </div>
+
+          <div class="member">
+            <div class="avatar">RY</div>
+            <div>
+              <div class="name">Ryan</div>
+              <div class="role">Tactician</div>
+            </div>
+          </div>
+
+          <div class="member">
+            <div class="avatar">ZA</div>
+            <div>
+              <div class="name">Zane</div>
+              <div class="role">Duelist</div>
+            </div>
+          </div>
+        </aside>
+      </main>
+
+      <div class="card-footer">All content strictly black & orange — this page uses only black and orange.</div>
+    </section>
+  </div>
+
+  <div class="site-footer">Website Made By Ozzy</div>
+
+  <script>
+    // Small entrance animation (no external libs)
+    (function(){
+      requestAnimationFrame(function(){
+        document.getElementById('mainCard').classList.add('loaded');
+        // stagger member and chip transitions
+        var members = document.querySelectorAll('.member');
+        members.forEach(function(el,i){ el.style.transitionDelay = (0.08 + i*0.08) + 's' });
+        var chips = document.querySelectorAll('.chip');
+        chips.forEach(function(el,i){ el.style.transitionDelay = (0.06 + i*0.05) + 's' });
+      });
+    })();
+  </script>
 </body>
 </html>
