Update text in the intro paragraph

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
       <main>
         <div class="intro">
-          <p>Welcome to the official Goon Squad website. The Goon Squad is the most powerful gooners in the world. Anyone who wants to 1v1 in a swordfight — we will win. We are really powerful and can land 100 hits in 1 minute, easy.</p>
+          <p>Welcome to the official Goon Squad website. The Goon Squad is the most powerful gooners in the world. Anyone who wants to 1v1 in a swordfight — we will win. We are really powerful and can land 100 loads in 1 minute, easy.</p>
 
           <div class="chips" aria-hidden="true">
             <div class="chip">1v1: Ready</div>
