Update card footer content

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </aside>
       </main>
 
-      <div class="card-footer">All content strictly black & orange — this page uses only black and orange.</div>
+      <div class="card-footer">18+ Nah We invite 8 And Under</div>
     </section>
   </div>
 
